--- a/vite-starter/src/App.css
+++ b/vite-starter/src/App.css
@@ -1,3 +1,19 @@
 .red {
   background-color: red;
 }
+
+.blue {
+  background-color: blue;
+}
+
+.gray {
+  background-color: gray;
+}
+
+.medium-violet-red {
+  background-color: mediumvioletred;
+}
+
+.midnight-blue {
+  background-color: midnightblue;
+}
